Pasta css e alterações no html

--- a/htmlCssJs/index.html
+++ b/htmlCssJs/index.html
@@ -3,9 +3,10 @@
 	<head>
 		<title>Dreyson Santiago</title>
 		<meta charset="utf-8"/>
+		<link href="css/stilo.css" type="text/css" rel="stylesheet"/>
 	</head>
 	<body>
-		<h1>Meu h1</h1>
+		<h1>Meu h1 - TITULO</h1>
 		<h2>Meu h2</h2>
 		<h3>Meu h3</h3>
 		<h4>Meu h4</h4>
@@ -19,8 +20,8 @@
 		
 		<a href="#">link</a>
 		
-		<div>
-		div1
+		<div class="div">
+			<h1>div1</h1>
 		</div>
 		<div>
 		div2
